--- a/Exec/HydroTests/Sedov/GNUmakefile
+++ b/Exec/HydroTests/Sedov/GNUmakefile
@@ -7,8 +7,8 @@ TOP = ../../..
 # compilation options
 COMP    = gcc
 
-USE_MPI = FALSE
-USE_OMP = FALSE
+USE_MPI = TRUE
+USE_OMP = TRUE
 
 PRECISION = DOUBLE
 DEBUG     = TRUE
