Set USE_MHD in GNUMakefile then translate into a "DEFINED" in Make.Nyx

--- a/Exec/MHDTests/BrioWu/GNUmakefile
+++ b/Exec/MHDTests/BrioWu/GNUmakefile
@@ -7,7 +7,6 @@ TOP = ../../..
 # compilation options
 COMP    = gcc
 
-MHD = TRUE
 USE_MPI = FALSE
 USE_OMP = FALSE
 
@@ -17,6 +16,7 @@ DEBUG     = TRUE
 
 # physics
 DIM      = 3
+USE_MHD = TRUE
 USE_GRAV = FALSE
 
 Bpack := ./Make.package
