--- a/Exec/MHDTests/BrioWu/GNUmakefile
+++ b/Exec/MHDTests/BrioWu/GNUmakefile
@@ -1,5 +1,5 @@
 # AMREX_HOME defines the directory in which we will find all the BoxLib code
-AMREX_HOME ?= /home/steven/amrex
+AMREX_HOME ?= /project/projectdirs/nyx/src/amrex
 
 # TOP defines the directory in which we will find Source, Exec, etc
 TOP = ../../..
@@ -11,8 +11,8 @@ USE_MPI = FALSE
 USE_OMP = FALSE
 
 PRECISION = DOUBLE
-DEBUG     = TRUE
-#DEBUG     = FALSE
+#DEBUG     = TRUE
+DEBUG     = FALSE
 
 # physics
 DIM      = 3
