Working on the BCs

--- a/Exec/MHDTests/BrioWu/GNUmakefile
+++ b/Exec/MHDTests/BrioWu/GNUmakefile
@@ -1,6 +1,6 @@
 # AMREX_HOME defines the directory in which we will find all the BoxLib code
- AMREX_HOME ?= /project/projectdirs/nyx/src/amrex
-#AMREX_HOME ?= /home/steven/amrex
+# AMREX_HOME = /project/projectdirs/nyx/src/amrex
+AMREX_HOME ?= /home/steven/amrex
 
 
 # TOP defines the directory in which we will find Source, Exec, etc
