--- a/Exec/MHDTests/BrioWu/GNUmakefile
+++ b/Exec/MHDTests/BrioWu/GNUmakefile
@@ -1,7 +1,7 @@
 # AMREX_HOME defines the directory in which we will find all the BoxLib code
 # AMREX_HOME = /project/projectdirs/nyx/src/amrex
-AMREX_HOME ?= /home/sireeves/amrex
-# AMREX_HOME ?= /home/steven/amrex
+# AMREX_HOME ?= /home/sireeves/amrex
+ AMREX_HOME ?= /home/steven/amrex
 
 
 # TOP defines the directory in which we will find Source, Exec, etc
@@ -11,7 +11,7 @@ TOP = ../../..
 COMP    = gcc
 
 USE_MPI = FALSE
-USE_OMP = FALSE
+USE_OMP = TRUE
 
 PRECISION = DOUBLE
 DEBUG     = TRUE
