Mag Updates were incorrect, did out the math, still seeing some negative internal energy issues.

--- a/Exec/MHDTests/BrioWu/GNUmakefile
+++ b/Exec/MHDTests/BrioWu/GNUmakefile
@@ -1,7 +1,7 @@
 # AMREX_HOME defines the directory in which we will find all the BoxLib code
 # AMREX_HOME = /project/projectdirs/nyx/src/amrex
- AMREX_HOME ?= /home/sireeves/amrex
-# AMREX_HOME ?= /home/steven/amrex
+# AMREX_HOME ?= /home/sireeves/amrex
+ AMREX_HOME ?= /home/steven/amrex
 
 
 # TOP defines the directory in which we will find Source, Exec, etc
