--- a/Exec/MHDTests/BrioWu/GNUmakefile
+++ b/Exec/MHDTests/BrioWu/GNUmakefile
@@ -11,7 +11,7 @@ TOP = /home/sireeves/Nyx
 # compilation options
 COMP    = gcc
 
-USE_MPI = FALSE
+USE_MPI = TRUE 
 USE_OMP = FALSE 
 
 PRECISION = DOUBLE
